2010-05-19  Jason Merrill  <jason@redhat.com>

	PR c++/44193
	* g++.dg/template/fntype1.C: New.

2010-04-30  DJ Delorie  <dj@redhat.com>

	* gcc.c-torture/execute/20100430-1.c: New test.

2010-04-27  Richard Guenther  <rguenther@suse.de>

	PR c++/40561
	Backport from mainline
	2008-12-29  Richard Guenther  <rguenther@suse.de>

	PR middle-end/38564
	* gcc.c-torture/compile/pr38564.c: New testcase.
	* g++.dg/other/pr40561.C: Likewise.

2010-04-27  Richard Guenther  <rguenther@suse.de>

 	Backport from mainline:
 	2010-03-19  Michael Matz  <matz@suse.de>
 
	PR c++/43116
	* g++.dg/other/pr43116.C: New testcase.

2010-04-20  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2010-03-01  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43220
	* gcc.c-torture/execute/pr43220.c: New testcase.

	2008-12-03  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/38360
	* gcc.c-torture/compile/pr38360.c: New test.

2010-04-20  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-01-24  Jakub Jelinek  <jakub@redhat.com>

	PR c/38957
	* gcc.dg/pr38957.c: New test.
 
2010-04-20  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2008-12-08  Jakub Jelinek  <jakub@redhat.com>
	PR c/35443
	* gcc.dg/pr35443.c: New test.

	2009-01-09  Jakub Jelinek  <jakub@redhat.com>

	PR c/35742
	* gcc.dg/pr35742.c: New test.

2010-04-20  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/43438
	* gcc.c-torture/execute/pr43438.c: New testcase.

2010-04-20  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43629
	* gcc.c-torture/execute/pr43629.c: New testcase.

2010-04-18  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/rep_clause5.ad[sb]: New test.
	* gnat.dg/rep_clause5_pkg.ads: New helper.

2010-04-06  Jakub Jelinek  <jakub@redhat.com>

	* gcc.target/s390/stackcheck1.c: Add dg-warning.

2010-03-31  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2010-03-27  Uros Bizjak  <ubizjak@gmail.com>
